# lapce-personal

./: CHANGELOG.md  Cargo.toml  Plan.md  README.md
.cargo/: config.toml
extra/windows/wix/: lapce.wxs
lapce-app/: Cargo.toml
lapce-app/src/: app.rs  config.rs  debug.rs  doc.rs  editor.rs  editor_tab.rs  keymap.rs  keypress.rs  main_split.rs  markdown.rs  palette.rs  plugin.rs  settings.rs  snippet.rs  window_tab.rs
lapce-app/src/config/: watcher.rs
lapce-app/src/editor/: view.rs
lapce-app/src/file_explorer/: data.rs  view.rs
lapce-app/src/keypress/: key.rs  keymap.rs  loader.rs
lapce-app/src/panel/: data.rs  debug_view.rs  source_control_view.rs  terminal_view.rs  view.rs
lapce-app/src/terminal/: data.rs  panel.rs  view.rs
lapce-core/src/: directory.rs
lapce-core/src/syntax/: highlight.rs  mod.rs
lapce-proxy/: Cargo.toml
lapce-proxy/benches/: search.rs
lapce-proxy/src/: buffer.rs  dispatch.rs  terminal.rs  watcher.rs
lapce-proxy/src/plugin/: catalog.rs  dap.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
lapce-rpc/src/: core.rs  file.rs
scripts/: build-pgo.ps1
