[package]
name         = "lapce-proxy"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
alacritty_terminal = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
crossbeam-channel  = { workspace = true }
directories        = { workspace = true }
flate2             = { workspace = true }
git2               = { workspace = true }
globset            = { workspace = true }
indexmap           = { workspace = true }
interprocess       = { workspace = true }
notify             = { workspace = true }
parking_lot        = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tar                = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-log        = { workspace = true }
url                = { workspace = true }
zstd               = { workspace = true }

lsp-types = { workspace = true }
psp-types = { workspace = true }

lapce-xi-rope     = { workspace = true }
lapce-core        = { workspace = true }
lapce-rpc         = { workspace = true }
floem-editor-core = { workspace = true }

# proxy specific dependencies

dyn-clone    = "1.0.16"
mimalloc     = "0.1"
walkdir      = "2.4.0"
jsonrpc-lite = "0.6.0"
polling      = "3.5.0"
libc         = "0.2"

# deleting files
trash = "3.0.6"

# search
ignore        = "0.4"
grep-searcher = "0.1"
grep-matcher  = "0.1"
grep-regex    = "0.1"

# wasm
wasmtime         = "46.0.0"
wasmtime-wasi    = "46.0.0"
wasmtime-wasi-io = "46.0.0"
bytes            = "1"
tokio            = { version = "1", features = ["io-util"] }

[dependencies.wasi-experimental-http-wasmtime]
# Vendored locally under third_party/ (forked from the lapce git crate); ported
# to the wasmtime 46 API alongside the host in plugin/wasi.rs.
path = "../third_party/wasi-experimental-http-wasmtime"

[target.'cfg(target_os = "macos")'.dependencies.locale_config]
git    = "https://github.com/lapce/locale_config.git"
branch = "lapce"
